--- a/tools/ScriptTool/ScriptTool.csproj
+++ b/tools/ScriptTool/ScriptTool.csproj
@@ -11,6 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="cn-char-lookup.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="eb-char-lookup.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
